@@ -205,11 +205,6 @@ BUSYBOX_DIR="busybox-${BUSYBOX_VER}"
 BUSYBOX_BINCACHE="%%CACHE%%/busybox-${BUSYBOX_VER}-%%ARCH%%.tar.bz2"
 #BUSYBOX_APPLETS="[ ash sh mount uname echo cut cat"
 
-DEVICE_MAPPER_VER="VERSION_DMAP"
-DEVICE_MAPPER_DIR="device-mapper.${DEVICE_MAPPER_VER}"
-DEVICE_MAPPER_SRCTAR="${DISTDIR}/device-mapper.${DEVICE_MAPPER_VER}.tgz"
-DEVICE_MAPPER_BINCACHE="%%CACHE%%/device-mapper-${DEVICE_MAPPER_VER}-%%ARCH%%.tar.bz2"
-
 LVM_VER="VERSION_LVM"
 LVM_DIR="LVM2.${LVM_VER}"
 LVM_SRCTAR="${DISTDIR}/LVM2.${LVM_VER}.tgz"
